welcome.lessons.welcome.bat.bool2.FizzBuzz.scala.error
fizzBuzz:10: error: unclosed string literal
    mot=Buzz"
             ^fizzBuzz:10: error: ';' expected but something found.
    mot=Buzz"
             ^